ヘッダーだいたい完成

--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>カフェ_架空</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <div class="header_inner">
+            <h1 class="header-logo">YamaSan Coffee</h1>
+            <nav class="gnav">
+                <ul class="nav-list">
+                    <li class="nav-item"><p class="nav-item-des">Profile<a href="#profile"></a></p></li>
+                    <li class="nav-item"><p class="nav-item-des">Concept<a href="#concept"></a></p></li>
+                    <li class="nav-item"><p class="nav-item-des">Blog<a href="#blog"></a></p></li>
+                    <li class="nav-item"><p class="nav-item-des">Access<a href="#access"></a></p></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="mv_inner">
+            <img src="./img/cafe_mv.jpg" alt="ラテアートの画像です。落ち着いた雰囲気のテーブルの上にハートのラテアートのコップがあります。" class="mv_img">
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
