--- a/index.html
+++ b/index.html
@@ -25,7 +25,133 @@
         <div class="mv_inner">
             <img src="./img/cafe_mv.jpg" alt="ラテアートの画像です。落ち着いた雰囲気のテーブルの上にハートのラテアートのコップがあります。" class="mv_img">
         </div>
+        <div class="profile">
+            <div class="profile-des_inner">
+                <h2 class="profile-title">YamaSan Coffee</h2>
+                <p class="profile-des">YamaSan Coffeeは、大人のための上質でモダンな空間を提供する<br>
+                山口県の喫茶店です。地元で収穫した豆を使用し、地産地消に貢献しています。<br>
+                店頭販売もしていますので、是非一度足を運ばれてみてください。</p>
+            </div>
+            <div class="profile_img_inner">
+                <img src="./img/cafe_profile.jpg" alt="プロフィール用の画像です。" class="profile_img">
+            </div>
+        </div>
+        <div class="feature">
+            <div class="feature-des">
+                <h2 class="feature_title">feature</h2>
+                <div class="feature-item">
+                    <span>山口県産の豆</span>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                    </p>
+                </div>
+                <div class="feature-item">
+                    <span>全国各地の豆</span>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                    </p>
+                </div>
+                <div class="feature-item scroll-point">
+                    <span>炭火深煎り</span>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                    </p>
+                </div>
+            </div>
+            <div class="feature_img_inner">
+                <img src="./img/cafe_beans.jpg" alt="" class="feature_img">
+            </div>
+        </div>
+        <div class="news">
+            <div class="news_inner">
+                <h2 class="news-title">NEWS</h2>
+                <div class="news-list">
+                    <div class="news-item">
+                        <div class="news-img_inner"><img src="./img/news_6.jpg" alt="コーヒー豆の画像" class="news-img"></div>
+                        <div class="news-des_inner">
+                            <h3 class="news-des-title">山口市産のコーヒー豆を入荷しました。</h3>
+                            <p class="news-item-des"></p>
+                            <p class="news-date">2021/12/16</p>
+                        </div>
+                    </div>
+                    <div class="news-item">
+                        <div class="news-img_inner"><img src="./img/news_5.jpg" alt="インスタグラムのロゴ" class="news-img"></div>
+                        <div class="news-des_inner">
+                            <h3 class="news-des-title">インスタグラムを開設しました。</h3>
+                            <p class="news-item-des"></p>
+                            <p class="news-date">2021/12/01</p>
+                        </div>
+                    </div>
+                    <div class="news-item">
+                        <div class="news-img_inner"><img src="./img/news_4.jpg" alt="紙吹雪の画像" class="news-img"></div>
+                        <div class="news-des_inner">
+                            <h3 class="news-des-title">来店者数が１００万人を突破しました。</h3>
+                            <p class="news-item-des"></p>
+                            <p class="news-date">2021/11/20</p>
+                        </div>
+                    </div>
+                    <div class="news-item">
+                        <div class="news-img_inner"><img src="./img/news_3.jpg" alt="清潔なキッチン" class="news-img"></div>
+                        <div class="news-des_inner">
+                            <h3 class="news-des-title">作業用ルームを新設しました。</h3>
+                            <p class="news-item-des"></p>
+                            <p class="news-date">2021/11/15</p>
+                        </div>
+                    </div>
+                    <div class="news-item">
+                        <div class="news-img_inner"><img src="./img/news_2.jpg" alt="オーナメント" class="news-img"></div>
+                        <div class="news-des_inner">
+                            <h3 class="news-des-title">１２月のおすすめ商品</h3>
+                            <p class="news-item-des"></p>
+                            <p class="news-date">2021/11/01</p>
+                        </div>
+                    </div>
+                    <div class="news-item">
+                        <div class="news-img_inner"><img src="./img/news_1.jpg" alt="バルーン" class="news-img"></div>
+                        <div class="news-des_inner">
+                            <h3 class="news-des-title">ホームページを開設しました。</h3>
+                            <p class="news-item-des"></p>
+                            <p class="news-date">2021/10/30</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer_inner">
+            <div class="map-des_inner">
+                <p>YamaSan Coffee 山口市本店</p>
+                <p>〒753-XXXX</p>
+                <p>お電話でのお問い合わせは、090-XXXX-XXXXまで</p> 
+
+                <table>
+                    <tr>
+                        <td>Instagram</td>
+                        <td>Twitter</td>
+                    </tr>
+                    <tr>
+                        <td>Facebook</td>
+                        <td>Flickr</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="map_inner">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.4516932144415!2d131.468537514982!3d34.18593378056985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35449708a558f413%3A0xd97f0bf4b2875d70!2z44CSNzUzLTAwNzEg5bGx5Y-j55yM5bGx5Y-j5biC5rud55S677yR4oiS77yRIOWxseWPo-ecjOW6gSDmnKzppKjmo58!5e0!3m2!1sja!2sjp!4v1639622626565!5m2!1sja!2sjp" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
