--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>カフェ_架空</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -34,6 +36,35 @@
             </div>
             <div class="profile_img_inner">
                 <img src="./img/cafe_profile.jpg" alt="プロフィール用の画像です。" class="profile_img">
+            </div>
+        </div>
+        <div class="menu">
+            <h2 class="menu-title">MENU</h2>
+            <div class="menu-list">
+                <div class="menu-item">
+                    <img src="./img/menu_1.jpg" alt="コーヒーカップ" class="menu-img">
+                    <p class="menudes">ブレンド</p>
+                </div>
+                <div class="menu-item">
+                    <img src="./img/menu_2.jpg" alt="コーヒーカップ" class="menu-img">
+                    <p class="menudes">アメリカン</p>
+                </div>
+                <div class="menu-item">
+                    <img src="./img/menu_3.jpg" alt="コーヒーカップ" class="menu-img">
+                    <p class="menudes">マンデリン</p>
+                </div>
+                <div class="menu-item">
+                    <img src="" alt="" class="menu-img">
+                    <p class="menudes">サンドイッチ</p>
+                </div>
+                <div class="menu-item">
+                    <img src="" alt="" class="menu-img">
+                    <p class="menudes">ホットドッグ</p>
+                </div>
+                <div class="menu-item">
+                    <img src="" alt="" class="menu-img">
+                    <p class="menudes">パンケーキ</p>
+                </div>
             </div>
         </div>
         <div class="feature">
@@ -136,12 +167,12 @@
 
                 <table>
                     <tr>
-                        <td>Instagram</td>
-                        <td>Twitter</td>
+                        <td><i class="fab fa-instagram"></i>Instagram</td>
+                        <td><i class="fab fa-twitter"></i>Twitter</td>
                     </tr>
                     <tr>
-                        <td>Facebook</td>
-                        <td>Flickr</td>
+                        <td><i class="fab fa-facebook"></i>Facebook</td>
+                        <td><i class="fab fa-flickr"></i>Flickr</td>
                     </tr>
                 </table>
             </div>
