--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <h1 class="header-logo">YamaSan Coffee</h1>
             <nav class="gnav">
                 <ul class="nav-list">
-                    <li class="nav-item"><p class="nav-item-des">Profile<a href="#profile"></a></p></li>
-                    <li class="nav-item"><p class="nav-item-des">Concept<a href="#concept"></a></p></li>
-                    <li class="nav-item"><p class="nav-item-des">Blog<a href="#blog"></a></p></li>
-                    <li class="nav-item"><p class="nav-item-des">Access<a href="#access"></a></p></li>
+                    <li class="nav-item"><p class="nav-item-des">MENU<a href="#menu"></a></p></li>
+                    <li class="nav-item"><p class="nav-item-des">FEATURE<a href="#feature"></a></p></li>
+                    <li class="nav-item"><p class="nav-item-des">NEWS<a href="#news"></a></p></li>
+                    <li class="nav-item"><p class="nav-item-des">ACCESS<a href="#access"></a></p></li>
                 </ul>
             </nav>
         </div>
@@ -54,18 +54,19 @@
                     <p class="menudes">マンデリン</p>
                 </div>
                 <div class="menu-item">
-                    <img src="" alt="" class="menu-img">
+                    <img src="./img/menu_4.jpg" alt="サンドイッチ" class="menu-img">
                     <p class="menudes">サンドイッチ</p>
                 </div>
                 <div class="menu-item">
-                    <img src="" alt="" class="menu-img">
+                    <img src="./img/menu_5.jpg" alt="ホットドッグ" class="menu-img">
                     <p class="menudes">ホットドッグ</p>
                 </div>
                 <div class="menu-item">
-                    <img src="" alt="" class="menu-img">
-                    <p class="menudes">パンケーキ</p>
+                    <img src="./img/menu_6.jpg" alt="苺のケーキ" class="menu-img">
+                    <p class="menudes">ケーキ</p>
                 </div>
             </div>
+            <p class="etc">etc...</p>
         </div>
         <div class="feature">
             <div class="feature-des">
