--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img src="./img/cafe_profile.jpg" alt="プロフィール用の画像です。" class="profile_img">
             </div>
         </div>
-        <div class="menu">
+        <div class="menu" id="menu">
             <h2 class="menu-title">MENU</h2>
             <div class="menu-list">
                 <div class="menu-item">
@@ -68,7 +68,7 @@
             </div>
             <p class="etc">etc...</p>
         </div>
-        <div class="feature">
+        <div class="feature" id="feature">
             <div class="feature-des">
                 <h2 class="feature_title">feature</h2>
                 <div class="feature-item">
@@ -103,7 +103,7 @@
                 <img src="./img/cafe_beans.jpg" alt="" class="feature_img">
             </div>
         </div>
-        <div class="news">
+        <div class="news" id="news">
             <div class="news_inner">
                 <h2 class="news-title">NEWS</h2>
                 <div class="news-list">
@@ -160,7 +160,7 @@
         </div>
     </main>
     <footer>
-        <div class="footer_inner">
+        <div class="footer_inner" id="access">
             <div class="map-des_inner">
                 <p>YamaSan Coffee 山口市本店</p>
                 <p>〒753-XXXX</p>
