--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                             <h3 class="news-des-title">山口市産のコーヒー豆を入荷しました。</h3>
                             <p class="news-item-des"></p>
                             <p class="news-date">2021/12/16</p>
+                            <a href="#"></a>
                         </div>
                     </div>
                     <div class="news-item">
@@ -121,6 +122,7 @@
                             <h3 class="news-des-title">インスタグラムを開設しました。</h3>
                             <p class="news-item-des"></p>
                             <p class="news-date">2021/12/01</p>
+                            <a href="#"></a>
                         </div>
                     </div>
                     <div class="news-item">
@@ -129,6 +131,7 @@
                             <h3 class="news-des-title">来店者数が１００万人を突破しました。</h3>
                             <p class="news-item-des"></p>
                             <p class="news-date">2021/11/20</p>
+                            <a href="#"></a>
                         </div>
                     </div>
                     <div class="news-item">
@@ -137,6 +140,7 @@
                             <h3 class="news-des-title">作業用ルームを新設しました。</h3>
                             <p class="news-item-des"></p>
                             <p class="news-date">2021/11/15</p>
+                            <a href="#"></a>
                         </div>
                     </div>
                     <div class="news-item">
@@ -145,6 +149,7 @@
                             <h3 class="news-des-title">１２月のおすすめ商品</h3>
                             <p class="news-item-des"></p>
                             <p class="news-date">2021/11/01</p>
+                            <a href="#"></a>
                         </div>
                     </div>
                     <div class="news-item">
@@ -153,6 +158,7 @@
                             <h3 class="news-des-title">ホームページを開設しました。</h3>
                             <p class="news-item-des"></p>
                             <p class="news-date">2021/10/30</p>
+                            <a href="#"></a>
                         </div>
                     </div>
                 </div>
@@ -181,6 +187,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.4516932144415!2d131.468537514982!3d34.18593378056985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35449708a558f413%3A0xd97f0bf4b2875d70!2z44CSNzUzLTAwNzEg5bGx5Y-j55yM5bGx5Y-j5biC5rud55S677yR4oiS77yRIOWxseWPo-ecjOW6gSDmnKzppKjmo58!5e0!3m2!1sja!2sjp!4v1639622626565!5m2!1sja!2sjp" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
+        <p class="copyright">©︎ YamaSan Coffee</p>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
