--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
 
                 <table>
                     <tr>
-                        <td><i class="fab fa-instagram"></i>Instagram</td>
-                        <td><i class="fab fa-twitter"></i>Twitter</td>
+                        <td><i class="fab fa-instagram"></i>Instagram<a href="#"></a></td>
+                        <td><i class="fab fa-twitter"></i>Twitter<a href="#"></a></td>
                     </tr>
                     <tr>
-                        <td><i class="fab fa-facebook"></i>Facebook</td>
-                        <td><i class="fab fa-flickr"></i>Flickr</td>
+                        <td><i class="fab fa-facebook"></i>Facebook<a href="#"></a></td>
+                        <td><i class="fab fa-flickr"></i>Flickr<a href="#"></a></td>
                     </tr>
                 </table>
             </div>
