--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="profile">
             <div class="profile-des_inner">
-                <h2 class="profile-title">YamaSan Coffee</h2>
+                <h2 class="profile-title">About</h2>
                 <p class="profile-des">YamaSan Coffeeは、大人のための上質でモダンな空間を提供する<br>
                 山口県の喫茶店です。地元で収穫した豆を使用し、地産地消に貢献しています。<br>
                 店頭販売もしていますので、是非一度足を運ばれてみてください。</p>
