--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="map-des_inner">
                 <p>YamaSan Coffee 山口市本店</p>
                 <p>〒753-XXXX</p>
-                <p>お電話でのお問い合わせは、090-XXXX-XXXXまで</p> 
+                <p>お電話でのお問い合わせは、<a href="tel:+0810000000000">090-XXXX-XXXXまで</a></p> 
 
                 <table>
                     <tr>
